@@ -2,15 +2,14 @@ package com.example.scanlink.api.features.sharefile.service.imp;
 
 import com.example.scanlink.api.features.sharefile.dao.DocumentRepository;
 import com.example.scanlink.api.features.sharefile.dao.SharedLinkRepository;
-import com.example.scanlink.api.features.sharefile.dto.FileHistoryResponse;
+import com.example.scanlink.api.features.sharefile.dto.DocumentHistoryResponse;
 import com.example.scanlink.api.features.sharefile.dto.UploadFileRequest;
 import com.example.scanlink.api.handler.AppException;
 import com.example.scanlink.api.handler.ErrorCode;
 import com.example.scanlink.api.features.sharefile.model.Document;
 import com.example.scanlink.api.features.sharefile.model.SharedLink;
-import com.example.scanlink.api.features.sharefile.model.enums.FileType;
 import com.example.scanlink.api.features.sharefile.model.enums.PermissionRole;
-import com.example.scanlink.api.features.sharefile.model.enums.ProcessingStatus;
+import com.example.scanlink.api.features.sharefile.model.enums.Visibility;
 import com.example.scanlink.api.features.sharefile.service.interfaces.CloudinaryService;
 import com.example.scanlink.api.features.sharefile.service.interfaces.IDocumentService;
 import lombok.RequiredArgsConstructor;
@@ -21,7 +20,6 @@ import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
-
 import java.util.stream.Collectors;
 
 
@@ -46,68 +44,70 @@ public class DocumentServiceImp implements IDocumentService {
         return documentRepository.save(file);
     }
     @Override
-    public List<FileHistoryResponse> getFilesByUserId(String userId) {
+    public List<DocumentHistoryResponse> getFilesByUserId(String userId) {
         return documentRepository.findByOwnerUid(userId)
                 .stream()
-                .map(file -> new FileHistoryResponse(
+                .map(file -> new DocumentHistoryResponse(
                         file.getId(),
                         file.getTitle(),
                         file.getStorageUrl(),
                         file.getCreatedAt(),
-                        PermissionRole.All
+                        PermissionRole.All,
+                        determineVisibility(file)
                 ))
                 .collect(Collectors.toList());
     }
     @Override
-    public List<FileHistoryResponse> getFilesByFileName(String fileName) {
+    public List<DocumentHistoryResponse> getFilesByFileName(String fileName) {
         List<Document> files =
-                documentRepository.findByFileNameOrderByCreatedAtDesc(fileName);
+                documentRepository.findByTitleContainingIgnoreCaseOrderByCreatedAtDesc(fileName);
 
         return files.stream()
                 .map(file -> {
 
                     SharedLink share = sharedLinkRepository
-                            .findByFileId(file.getId());
+                            .findByDocumentId(file.getId());
 
-                    return new FileHistoryResponse(
+                    PermissionRole role = (share != null) ? share.getRole() : PermissionRole.NONE;
+
+                    return new DocumentHistoryResponse(
                             file.getId(),
                             file.getTitle(),
                             file.getStorageUrl(),
                             file.getCreatedAt(),
-                            PermissionRole.All,
-                            file.getVisibility()
+                            role,
+                            determineVisibility(file)
                     );
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Document uploadAndSave(MultipartFile file, String userId, String type) throws IOException {
+    public Document uploadAndSave(MultipartFile file, String userId, String title, String extractText) throws IOException {
         // upload file cloudinary
         Map uploadResult = cloudinaryService.uploadFile(file.getBytes(), "scanlink/uploads");
         String publicId = (String) uploadResult.get("publicId");
 
+        if(userId ==null) throw new AppException(ErrorCode.NOT_FOUND);
         try {
             Document entity = new Document();
-            entity.setTitle(file.getOriginalFilename());
+            entity.setTitle(title);
             entity.setFileSize(file.getSize());
             entity.setOwnerUid(userId);
             entity.setStorageUrl((String) uploadResult.get("url"));
-            entity.setCloudinaryPublicId((String) uploadResult.get("public_id"));
-            entity.setType(detectFileType(file));
-            entity.setStatus(ProcessingStatus.SUCCESS);
             entity.setCreatedAt(LocalDateTime.now());
+            entity.setExtractedText(extractText);
 
             return documentRepository.save(entity);
         }catch (Exception e) {
-                cloudinaryService.deleteFile(publicId);
+                 cloudinaryService.deleteFile(publicId);
             throw new IllegalArgumentException("File upload failed");
         }
     }
 
     @Override
     public Document findByIdAndUserId(String fileId, String userId) {
-        return documentRepository.findByIdAndUserId(fileId,userId) ;
+        return documentRepository.findByIdAndOwnerUid(fileId,userId) ;
     }
 
     @Override
@@ -121,16 +121,17 @@ public class DocumentServiceImp implements IDocumentService {
         documentRepository.save(file);
     }
 
-    private FileType detectFileType(MultipartFile file) {
-        String contentType = file.getContentType();
-        if (contentType == null) throw new AppException(ErrorCode.NOT_FOUND);
-
-        return switch (contentType) {
-            case "application/pdf"    -> FileType.PDF;
-            case "application/vnd.openxmlformats-officedocument.wordprocessingml.document" -> FileType.DOCX;
-            case "text/plain"         -> FileType.TXT;
-            case "image/jpeg", "image/png", "image/webp" -> FileType.IMAGE;
-            default -> throw new IllegalArgumentException("File type không hỗ trợ: " + contentType);
-        };
+    private Visibility determineVisibility(Document file) {
+        if (file.getSharedLinks() != null && !file.getSharedLinks().isEmpty()) {
+            return Visibility.PUBLIC;
+        }
+        if (file.getPermissions() != null && !file.getPermissions().isEmpty()) {
+            return Visibility.SHARED;
+        }
+        SharedLink share = sharedLinkRepository.findByDocumentId(file.getId());
+        if (share != null) {
+            return share.getShareWithUserId() == null ? Visibility.PUBLIC : Visibility.SHARED;
+        }
+        return Visibility.PRIVATE;
     }
 }
